--- a/MyEventURL/Content/Site.css
+++ b/MyEventURL/Content/Site.css
@@ -1,4 +1,67 @@
-﻿body {
+﻿/* Beginning Grid Component */
+    body {
+        font-family: Helvetica Neue, Arial, sans-serif;
+        font-size: 14px;
+        color: #444;
+    }
+
+    table.grid {
+        border: 2px solid #42b983;
+        border-radius: 3px;
+        background-color: #fff;
+    }
+
+    th.grid {
+        background-color: #42b983;
+        color: rgba(255,255,255,0.66);
+        cursor: pointer;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
+
+    td.grid {
+        background-color: #f9f9f9;
+    }
+
+    th.grid, td.grid {
+        min-width: 120px;
+        padding: 10px 20px;
+    }
+
+        th.active {
+            color: #fff;
+        }
+
+            th.active .arrow {
+                opacity: 1;
+            }
+
+    .arrow {
+        display: inline-block;
+        vertical-align: middle;
+        width: 0;
+        height: 0;
+        margin-left: 5px;
+        opacity: 0.66;
+    }
+
+        .arrow.asc {
+            border-left: 4px solid transparent;
+            border-right: 4px solid transparent;
+            border-bottom: 4px solid #fff;
+        }
+
+        .arrow.dsc {
+            border-left: 4px solid transparent;
+            border-right: 4px solid transparent;
+            border-top: 4px solid #fff;
+        }
+
+/* End Grid Component */
+
+body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
