moving grid to js

--- a/MyEventURL/Views/Components/_EventCard.cshtml
+++ b/MyEventURL/Views/Components/_EventCard.cshtml
@@ -1,4 +1,4 @@
-﻿<!-- Grid Component
+﻿<!-- EventCard Component
 <eventcard  :id="eventID"
             :title="Title"
             :description="Description"
@@ -44,4 +44,4 @@
     })
 </script>
 
-<!-- End Grid Component -->
+<!-- End EventCard Component -->
