--- a/MyEventURL/Views/Events/_Index.cshtml
+++ b/MyEventURL/Views/Events/_Index.cshtml
@@ -1,4 +1,4 @@
-﻿@Html.Partial("~/Views/Components/_GridComponent.cshtml")
+﻿<script src="/Scripts/grid.js"></script>
 @Html.Partial("~/Views/Components/_EventForm.cshtml")
 
 @{
