Starting Work on Outlook Add-In

--- a/MyEventURL/Content/AddIn/AddIn.css
+++ b/MyEventURL/Content/AddIn/AddIn.css
@@ -1,4 +1,4 @@
-/* 
+﻿/* 
  * Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT license.
  * See LICENSE in the project root for license information.
  */
@@ -53,10 +53,10 @@ h6 {
     justify-content: flex-end;
 }
 
-.ms-welcome__header > h1 {
-    margin-top: 30px;
-    text-align: center;
-}
+    .ms-welcome__header > h1 {
+        margin-top: 30px;
+        text-align: center;
+    }
 
 .ms-welcome__main {
     display: -webkit-flex;
@@ -72,36 +72,36 @@ h6 {
     padding: 30px 20px;
 }
 
-.ms-welcome__main > h2 {
-    width: 100%;
-    text-align: center;
-}
+    .ms-welcome__main > h2 {
+        width: 100%;
+        text-align: center;
+    }
 
 .ms-welcome__features {
     list-style-type: none;
     margin-top: 30px;
 }
 
-.ms-welcome__features.ms-List .ms-ListItem {
-    padding: 0px;
-    padding-bottom: 20px;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-direction: row;
-    flex-direction: row;
-    -webkit-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    -webkit-align-items: center;
-    align-items: center;
-}
+    .ms-welcome__features.ms-List .ms-ListItem {
+        padding: 0px;
+        padding-bottom: 20px;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-flex-direction: row;
+        flex-direction: row;
+        -webkit-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+        -webkit-align-items: center;
+        align-items: center;
+    }
 
-.ms-welcome__features.ms-List .ms-ListItem > .ms-Icon {
-    font-size: 14pt;
-}
+        .ms-welcome__features.ms-List .ms-ListItem > .ms-Icon {
+            font-size: 14pt;
+        }
 
-.ms-welcome__features.ms-List .ms-ListItem > .ms-Icon {
-    margin-right: 10px;
-}
+        .ms-welcome__features.ms-List .ms-ListItem > .ms-Icon {
+            margin-right: 10px;
+        }
 
 .ms-welcome__action.ms-Button--hero {
     margin-top: 30px;
@@ -117,16 +117,16 @@ h6 {
     align-items: center;
 }
 
-.ms-welcome__action.ms-Button--hero .ms-Button-icon .ms-Icon {
-    margin-left: 5px;
-    margin-top: 4px;
-    border: none;
-    font-size: 14pt;
-}
+    .ms-welcome__action.ms-Button--hero .ms-Button-icon .ms-Icon {
+        margin-left: 5px;
+        margin-top: 4px;
+        border: none;
+        font-size: 14pt;
+    }
 
-.ms-welcome__action.ms-Button--hero:hover .ms-Button-icon .ms-Icon {
-    border: none;
-}
+    .ms-welcome__action.ms-Button--hero:hover .ms-Button-icon .ms-Icon {
+        border: none;
+    }
 
 @media (min-width: 0) and (max-width: 350px) {
     .ms-welcome__features {
