--- a/MyEventURL/Views/Components/_Admin.cshtml
+++ b/MyEventURL/Views/Components/_Admin.cshtml
@@ -52,7 +52,7 @@
         },
         data: function () {
             return {
-                cols: [{ name: "Start", hide: false },
+                cols: [{ name: "Start", hide: true },
                 { name: "Title", hide: false },
                 { name: "Views", hide: true },
                 { name: "Adds", hide: true },
