--- a/MyEventURL/Views/Shared/_Layout.cshtml
+++ b/MyEventURL/Views/Shared/_Layout.cshtml
@@ -3,7 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <meta property="fb:app_id" content="908917155889295" />
+    <meta property="og:image" content="https://myeventurl.azurewebsites.net/content/myeventurl-200.png" />
+    <meta property="og:title" content="@ViewBag.Title - MyEventURL.com" />
+    <meta property="og:description" content="@ViewBag.Description Publishing calendar reminders for events should be easy!" />
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="MyEventURL">
+    <title>@ViewBag.Title - MyEventURL.com</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/jqueryui")
     @Scripts.Render("~/bundles/modernizr")
