--- a/MyEventURL/Views/Events/Details.cshtml
+++ b/MyEventURL/Views/Events/Details.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
-    ViewBag.Title = "Details";
+    ViewBag.Title = Model.Title + " Details";
+    ViewBag.description = Model.Description;
 }
 
 
