requiring authentication for create-edit-delete events, implementing chosen, starting work on boards form

--- a/MyEventURL/Views/Boards/Delete.cshtml
+++ b/MyEventURL/Views/Boards/Delete.cshtml
@@ -20,6 +20,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Events)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Events)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.View)
         </dt>
 
