--- a/MyEventURL/Views/Boards/Details.cshtml
+++ b/MyEventURL/Views/Boards/Details.cshtml
@@ -19,6 +19,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Events)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Events)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.View)
         </dt>
 
