--- a/MyEventURL/Views/Events/Delete.cshtml
+++ b/MyEventURL/Views/Events/Delete.cshtml
@@ -86,24 +86,16 @@
     var DeleteForm = new Vue({
         el: "#deleteform",
         data: {
-            email: "@User.Identity.Name",
         },
         created: function() {
 
         },
         methods: {
             evalEmail: function () {
-                return (this.email == "@Model.Email");
+                return ("@ViewBag.Email" == "@Model.Email");
             }
         }
     })
 
-    Office.onReady()
-        .then(function () {
-            if (Office.context.mailbox != null) {
-                var email = Office.context.mailbox.userProfile.emailAddress;
-                var item = Office.context.mailbox.item;
-                DeleteForm.email = email;
-            }
-        })
+
 </script>
