Initial Development on Boards

--- a/MyEventURL/Views/Boards/Index.cshtml
+++ b/MyEventURL/Views/Boards/Index.cshtml
@@ -6,7 +6,7 @@
     var EventsList = Events.Split(',');
     Events = "";
     Events = EventsList.ToString();
-    Output.Write(EventList[0]);
+    Output.Write(EventsList[0]);
 }
 <h2>Index</h2>
 
