--- a/MyEventURL/Views/Shared/_BlankLayout.cshtml
+++ b/MyEventURL/Views/Shared/_BlankLayout.cshtml
@@ -4,13 +4,11 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
-    @Styles.Render("~/Content/jqueryui")
+    @Styles.Render("~/Content/styles")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryui")
-    @Scripts.Render("~/bundles/momentjs")
     @Scripts.Render("~/bundles/vuejs")
+    @Scripts.Render("~/bundles/momentjs")
     <!-- Office JavaScript API -->
     <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.debug.js"></script>
 </head>
