--- a/MyEventURL/Views/Shared/_Layout.cshtml
+++ b/MyEventURL/Views/Shared/_Layout.cshtml
@@ -10,11 +10,9 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="MyEventURL">
     <title>@ViewBag.Title - MyEventURL.com</title>
-    @Styles.Render("~/Content/css")
-    @Styles.Render("~/Content/jqueryui")
+    @Styles.Render("~/Content/styles")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/vuejs")
     @Scripts.Render("~/bundles/momentjs")
     <script>
@@ -59,7 +57,6 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
 </html>
