--- a/MyEventURL/Views/Events/_EventForm.cshtml
+++ b/MyEventURL/Views/Events/_EventForm.cshtml
@@ -263,7 +263,7 @@
             {
                 minInterval: (1000 * 60 * 60), // 1hr
                 dateFormat: 'mm/dd/yy',
-                timeFormat: 'hh:mm:ss TT',
+                timeFormat: 'h:mm:ss TT',
                 start: {}, // start picker options
                 end: {} // end picker options
             });
