redirecturi, update office addin

--- a/MyEventURL/Views/Events/Details.cshtml
+++ b/MyEventURL/Views/Events/Details.cshtml
@@ -12,7 +12,7 @@
         <div class="alert alert-danger" style="margin:10px">
             This is a private event.  Only @emailarray[1] users can view the event.
         </div>
-        @Html.Partial("_DetailsLogin") 
+        @Html.Partial("~/Views/Shared/_Login.cshtml") 
     }
     else
     {
