--- a/MyEventURL/Views/Addin/Index.cshtml
+++ b/MyEventURL/Views/Addin/Index.cshtml
@@ -10,111 +10,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>addin</title>
-
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-
-    @Styles.Render("~/Content/css")
-    @Styles.Render("~/Content/jqueryui")
-
-
+    @Scripts.Render("~/bundles/vuejs")
+    @Scripts.Render("~/bundles/momentjs")
+    @Styles.Render("~/Content/styles")
     <!-- Office JavaScript API -->
     <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.debug.js"></script>
 </head>
 
-<body class="ms-font-m ms-welcome" style="padding: 5px;">
-    @Scripts.Render("~/bundles/vuejs")
-    @Scripts.Render("~/bundles/momentjs")
-
-    <header >
-            <div style="min-width:100%; display:table-cell; text-align:center; vertical-align:middle" class="navbar navbar-inverse navbar-fixed-top"><a style="margin-top:8px;" class="btn btn-default" href="javascript:createform()">Create</a></div>
+<body style="padding: 5px;">
+    <header>
+        <div style="min-width:100%; display:table-cell; text-align:center; vertical-align:middle" class="navbar navbar-inverse navbar-fixed-top"><div id="createbutton" hidden><a style="margin-top:8px;" class="btn btn-default" href="javascript:createform()">Create</a></div></div>
     </header>
     <main id="app-body" class="ms-welcome__main">
-        @Html.Partial("~/Views/Components/_GridComponent.cshtml")
-        @Html.Partial("~/Views/Components/_Admin.cshtml")
-        @Html.Partial("~/Views/Components/_IframeModal.cshtml")
-
-        @{
-            ViewBag.Title = "Index";
-        }
-
-        <script>
-            function createform() {
-                iframemodal.setTitle("Create an Event");
-                iframemodal.setSrc("/Events/Create?embed=true");
-                $("#iframemodal").modal("show");
+        <div style="margin-top:50px;">
+            @{
+                if (User.Identity.IsAuthenticated)
+                {
+                    @Html.Partial("_Index")
+                }
+                else
+                {
+                    @Html.Partial("~/Views/Shared/_Login.cshtml")
+                }
             }
-        </script>
-
-        <div style="margin-top:50px" id="eventlist">
-            
-            <h2>Welcome<br /> {{Account.UserName}}</h2>
-
-
-            <adminmenu :future="future" :past="past"></adminmenu>
         </div>
-
     </main>
-
-    <script>
-        var EventList = new Vue({
-            el: '#eventlist',
-            components: {
-                'adminmenu': admincomponent
-            },
-            data: {
-                future: [],
-                past: [],
-                office: { Mailbox: '', Email: '', Item: '' }
-            },
-            computed: {
-                Account: function () {
-                    var email = this.office.Email;
-                    var emailarray = email.split("@@");
-                    return ({ Email: email, Domain: emailarray[1], UserName: emailarray[0]})
-                }
-            },
-            methods: {
-                getEvents: function () {
-                    axios.get('/odata/GetEvent?$filter=Email eq \'' + this.Account.Email + '\'&$orderby=Start desc')
-                        .then(function (response) {
-                            response.data.value.forEach(function (fact) {
-                                var startmoment = moment(fact.Start);
-                                var event = {
-                                    Start: startmoment.format("MMM D"),
-                                    Title: fact.Title,
-                                    Views: fact.Views,
-                                    Adds: fact.Engaged,
-                                    Actions: fact.EventId
-                                }
-                                var nowmoment = moment(Date.now());
-                                if (nowmoment.diff(startmoment) < 0) EventList.future.push(event); else EventList.past.push(event)
-                            })
-                        })
-
-                }
-            },
-        })
-        if (url("?action") == "create") createform();
-        Office.onReady()
-            .then(function () {
-                //console.log("Office is ready");
-                var email = Office.context.mailbox.userProfile.emailAddress;
-                //console.log(email);
-                EventList.office.Email = email;
-                EventList.getEvents()
-            })
-        /*
-        setTimeout(function () {
-            if (Office.context != null) {
-                EventList.office.Mailbox = Office.context.mailbox;
-                EventList.office.Email = EventList.office.Mailbox.userProfile.emailAddress;
-                EventList.office.Item = EventList.office.Mailbox.item;
-                EventList.getEvents()
-            }
-        }, 2000)
-        */
-    </script>
 </body>
 </html >
