--- a/MyEventURL/Views/Events/_EventForm.cshtml
+++ b/MyEventURL/Views/Events/_EventForm.cshtml
@@ -145,7 +145,7 @@
         </div>
 
         <!-- Email -->
-        <div class="form-group" style="visibility:visible">
+        <div class="form-group" style="visibility:hidden">
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.Editor("Email", paramEmail, new { htmlAttributes = new { @class = "form-control" } })
@@ -196,6 +196,8 @@
 
             if (@paramEventId == 0) {
                 $('#Organizer').val(Account.UserName);
+
+                var item = Office.context.mailbox.item;
 
                 if (item != null) {
                     item.start.getAsync(function (result) {
