--- a/MyEventURL/Views/Shared/_Layout.cshtml
+++ b/MyEventURL/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("My Events", "Index", "Events")</li>
+                    <li>@Html.ActionLink("Manage", "Index", "Events")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
