--- a/MyEventURL/Views/Events/_EventForm.cshtml
+++ b/MyEventURL/Views/Events/_EventForm.cshtml
@@ -1,6 +1,8 @@
 ﻿@model MyEventURL.Event
 
 @{
+<!-- Office JavaScript API -->
+<script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
 
     //This Form is currently leveraged by Events Create and Edit Views.
 
