--- a/MyEventURL/Views/Boards/_BoardForm.cshtml
+++ b/MyEventURL/Views/Boards/_BoardForm.cshtml
@@ -58,7 +58,7 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-primary" style="min-width:100%" />
+            <input type="submit" value="@ViewBag.Button" class="btn btn-primary" style="min-width:100%" />
         </div>
     </div>
 
@@ -89,12 +89,16 @@
         </div>
     </div>
 
-    <!-- TeamCalendar -->
-    <div class="form-group" style="visibility:visible">
-        @Html.LabelFor(model => model.TeamCalendar, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.TeamCalendar, new { })
+    <div class="form-group" style="padding:10px;">
+        <!-- Team Calendar -->
+        <div class="col-md-3">
+            @Html.CheckBoxFor(model => model.TeamCalendar) @Html.LabelFor(model => model.TeamCalendar, htmlAttributes: new { @class = "control-label" })
             @Html.ValidationMessageFor(model => model.TeamCalendar, "", new { @class = "text-danger" })
+        </div>
+        <!-- Private -->
+        <div class="col-md-3">
+            @Html.CheckBoxFor(model => model.Private) @Html.LabelFor(model => model.Private, htmlAttributes: new { @class = "control-label" })
+            @Html.ValidationMessageFor(model => model.Private, "", new { @class = "text-danger" })
         </div>
     </div>
 
