--- a/MyEventURL/Views/Home/_About.cshtml
+++ b/MyEventURL/Views/Home/_About.cshtml
@@ -34,7 +34,7 @@ Before using this site please review: <br />
                 <h4 class="modal-title">Privacy Policy</h4>
             </div>
             <div class="modal-body" style="height:400px">
-                <iframe src="https://avisuj.github.io/makemeetingsgreat/privacy.html" name="privacy" style="border:0px; width:100%; height:370px"></iframe>
+                <iframe src="https://makemeetingsgreat.github.io/makemeetingsgreat/privacy.html" name="privacy" style="border:0px; width:100%; height:370px"></iframe>
             </div>
         </div>
     </div>
@@ -50,7 +50,7 @@ Before using this site please review: <br />
                 <h4 class="modal-title">Terms of Use</h4>
             </div>
             <div class="modal-body" style="height:400px">
-                <iframe src="https://avisuj.github.io/makemeetingsgreat/usage.html" name="usage" style="border:0px; width:100%; height:370px"></iframe>
+                <iframe src="https://makemeetingsgreat.github.io/makemeetingsgreat/usage.html" name="usage" style="border:0px; width:100%; height:370px"></iframe>
             </div>
         </div>
     </div>
