--- a/MyEventURL/Views/Boards/Details.cshtml
+++ b/MyEventURL/Views/Boards/Details.cshtml
@@ -1,6 +1,4 @@
-﻿@model MyEventURL.Models.Board
-
-@{
+﻿@{
     ViewBag.Title = "Details";
 
     if (ViewBag.Embed)
@@ -10,7 +8,7 @@
 
 }
 
-<div style="margin:10px"><h2>@Html.DisplayFor(model => model.BoardName)</h2></div>
+<div style="margin:10px"><h2>@Model.BoardName</h2></div>
 
 @{
     string[] emailarray = Model.Email.Split('@');
@@ -32,7 +30,7 @@
 }
 
 <script>
-    function resizeIFrameToFitContent( iFrame ) {
+    function resizeIFrameToFitContent(iFrame) {
         //iFrame.width = iFrame.contentWindow.document.body.clientWidth;
         iFrame.height = iFrame.contentWindow.document.body.clientHeight;
     }
@@ -40,5 +38,5 @@
     setInterval(function () {
         var iFrame = $('#CalendarFrame');
         resizeIFrameToFitContent(iFrame[0]);
-    },1000)
+    }, 1000)
 </script>
