--- a/MyEventURL/Views/Boards/_BoardForm.cshtml
+++ b/MyEventURL/Views/Boards/_BoardForm.cshtml
@@ -38,7 +38,7 @@
     BoardViews[1] = new SelectListItem { Text = "Calendar", Value = "Calendar" };
 
     //Load Paramerters default values
-    string paramEmail = User.Identity.Name;
+    string paramEmail = ViewBag.Email;
 
     //If Model exists, Load Model values for Parameter
     if (Model != null)
@@ -133,7 +133,7 @@
     <div class="form-group" style="visibility:hidden">
         @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.Editor("Email", paramEmail, new { htmlAttributes = new { @class = "form-control" } })
         </div>
     </div>
 
